--- a/Dashboard-2023-12-12.ipynb
+++ b/Dashboard-2023-12-12.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[DIY Covid-19 Dashboard](https://github.com/3miki/add_path) (C) Miki Suzuki, 2023. This notebook is released under the [GNU GPLv3.0 or later](https://www.gnu.org/licenses/)."
+    "[DIY Covid-19 Dashboard](https://github.com/3miki/diy-covid-19-dashboard) (C) Miki Suzuki, 2023. This notebook is released under the [GNU GPLv3.0 or later](https://www.gnu.org/licenses/)."
    ]
   },
   {
