--- a/Dashboard-2023-12-12.ipynb
+++ b/Dashboard-2023-12-12.ipynb
@@ -87,20 +87,25 @@
     "    case = data_dict['CaseByAge']\n",
     "    reinfection = data_dict['ReinfectionByAge']\n",
     "    ageranges1 = [x['age'] for x in case]\n",
+    "    \n",
     "    # Remove age ranges unwanted in the graph. The age range '00-59' and '60+' are total numbers within the age ranges (duplicate).\n",
     "    ageranges1.remove('00_59')\n",
     "    ageranges1.remove('60+')\n",
     "    ageranges1.remove('unassigned')\n",
     "    ageranges1.sort(key=min_age) \n",
+    "    \n",
     "    age_df1 = pd.DataFrame(index=ageranges1, columns=['Total Infection','Reinfection'])\n",
+    "    \n",
     "    for entry in case:\n",
     "        if entry['age'] in ageranges1:\n",
     "            ageband = entry['age']\n",
     "            age_df1.loc[ageband, 'Total Infection']=entry['cases'] if entry['cases'] != None else 0.0\n",
+    "            \n",
     "    for entry in reinfection:\n",
     "        if entry['age'] in ageranges1:\n",
     "            ageband = entry['age']\n",
     "            age_df1.loc[ageband, 'Reinfection']=entry['cases'] if entry['cases'] != None else 0.0\n",
+    "\n",
     "    return age_df1\n",
     "\n",
     "# The metric 'vaccinationsAgeDemographics' has different age groups from the above metrics and needs a separate graph.\n",
@@ -109,17 +114,21 @@
     "    data_dict = apidata['data'][0]\n",
     "    vaccination = data_dict['VaccinationByAge']    \n",
     "    ageranges2 = [x['age'] for x in vaccination]\n",
+    "    \n",
     "    ageranges2.remove('50+')\n",
     "    ageranges2.remove('65+')\n",
     "    ageranges2.remove('75+')\n",
     "    ageranges2.sort(key=min_age)\n",
+    "    \n",
     "    age_df2 = pd.DataFrame(index=ageranges2, columns=['First Dose', 'Second Dose', 'Third Dose'])\n",
+    "    \n",
     "    for entry in vaccination:\n",
     "        if entry['age'] in ageranges2:\n",
     "            ageband = entry['age']\n",
     "            age_df2.loc[ageband, 'First Dose'] = entry['cumPeopleVaccinatedFirstDoseByVaccinationDate'] if entry['cumPeopleVaccinatedFirstDoseByVaccinationDate'] != None else 0.0\n",
     "            age_df2.loc[ageband, 'Second Dose'] = entry['cumPeopleVaccinatedSecondDoseByVaccinationDate'] if entry['cumPeopleVaccinatedSecondDoseByVaccinationDate'] != None else 0.0\n",
     "            age_df2.loc[ageband, 'Third Dose'] = entry['cumPeopleVaccinatedThirdInjectionByVaccinationDate'] if entry['cumPeopleVaccinatedThirdInjectionByVaccinationDate'] != None else 0.0\n",
+    "            \n",
     "    return age_df2\n",
     "\n",
     "age_df1 = wrangle_data1(analysis_by_age_initial_data)\n",
@@ -159,22 +168,50 @@
     "    covid_filename = f'AnalysisByAge_{date}.json'\n",
     "    with open(covid_filename, \"wt\") as file:\n",
     "        json.dump(analysisByAge, file)\n",
-    "    return analysisByAge"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Pick any date from the following options to display graphs of your selected date"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The initial specified date for the following graphs is 2022-01-01. \n",
-    "You can choose a date from the options below."
+    "    return analysisByAge\n",
+    "\n",
+    "def api_button_callback(button):\n",
+    "    global age_df1  \n",
+    "    global age_df2\n",
+    "    \n",
+    "    print('Starting refresh API call')   # Monitor an API call status in a log.\n",
+    "    # While loading new data, the button is disabled with the spinner icon and 'Loading' text.\n",
+    "    api_button.disabled = True\n",
+    "    api_button.description = 'Loading...'\n",
+    "    api_button.icon = 'spinner'\n",
+    "    \n",
+    "    try:\n",
+    "        new_api_data=access_api(select_date.value)\n",
+    "        # Wrangle the data and overwrite the two dataframes for plotting.          \n",
+    "        age_df1=wrangle_data1(new_api_data)\n",
+    "        age_df2=wrangle_data2(new_api_data)\n",
+    "        \n",
+    "        refresh_graphs() # Two graphs will be refreshed with this function.\n",
+    "        print('Finished refresh API call') \n",
+    "        \n",
+    "        # Change the button back to the original state (status and description) but show the check icon instead\n",
+    "        api_button.disabled = False\n",
+    "        api_button.description = 'Change date'       \n",
+    "        api_button.icon = 'check'\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f'Error message: {e}')\n",
+    "        api_button.button_style = 'warning'\n",
+    "        api_button.description = 'Error occurred'        \n",
+    "        api_button.icon = 'exclamation-triangle'\n",
+    "        \n",
+    "def refresh_graphs():\n",
+    "    # Change the values by setting the column values with empty lists, and then show all the values.\n",
+    "    # infection_columns.value = []\n",
+    "    # infection_columns.value = infection_columns.options\n",
+    "    \n",
+    "    # vaccine_columns.value = []\n",
+    "    # vaccine_columns.value = vaccine_columns.options\n",
+    "    \n",
+    "    # Update the two graphs according to the new data of the selected date.\n",
+    "    # The widgets need to be refreshed as well.\n",
+    "    show_graph1()\n",
+    "    show_graph2()"
    ]
   },
   {
@@ -209,31 +246,6 @@
     "    disabled=False,\n",
     ")\n",
     "\n",
-    "def api_button_callback(button):\n",
-    "    global age_df1  \n",
-    "    global age_df2\n",
-    "    print('Starting refresh API call')   # Monitor an API call status in a log.\n",
-    "    # While loading new data, the button is disabled with the spinner icon and 'Loading' text.\n",
-    "    api_button.disabled = True\n",
-    "    api_button.description = 'Loading...'\n",
-    "    api_button.icon = 'spinner'\n",
-    "    try:\n",
-    "        new_api_data=access_api(select_date.value)\n",
-    "        # Wrangle the data and overwrite the two dataframes for plotting.          \n",
-    "        age_df1=wrangle_data1(new_api_data)\n",
-    "        age_df2=wrangle_data2(new_api_data)\n",
-    "        refresh_graphs() # Two graphs will be refreshed with this function.\n",
-    "        print('Finished refresh API call') \n",
-    "        # Change the button back to the original state (status and description) but show the check icon instead\n",
-    "        api_button.disabled = False\n",
-    "        api_button.description = 'Change date'       \n",
-    "        api_button.icon = 'check'\n",
-    "    except Exception as e:\n",
-    "        print(f'Error message: {e}')\n",
-    "        api_button.button_style = 'warning'\n",
-    "        api_button.description = 'Error occurred'        \n",
-    "        api_button.icon = 'exclamation-triangle'\n",
-    "\n",
     "api_button = wdg.Button(\n",
     "    description='Change date',\n",
     "    disabled=False,\n",
@@ -245,36 +257,6 @@
     "api_button.on_click(api_button_callback)\n",
     "controls = wdg.HBox([select_date, api_button])\n",
     "display(controls)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-12T12:35:01.049388Z",
-     "start_time": "2023-12-12T12:35:01.044973Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def refresh_graphs():\n",
-    "    # Save the current values, change them by setting the values with empty lists, \n",
-    "    # and then set them back to the current values.\n",
-    "    current = infection_columns.value\n",
-    "    infection_columns.value = []\n",
-    "    infection_columns.value = current\n",
-    "    current = vaccine_columns.value\n",
-    "    vaccine_columns.value = []\n",
-    "    vaccine_columns.value = current\n",
-    "    # Update the two graphs according to the new data of the selected date.\n",
-    "    # The widgets need to be refreshed as well.\n",
-    "    graph1 = wdg.interactive_output(age_graph1, {'graphcolumns1': infection_columns})    \n",
-    "    controls1 = wdg.HBox([infection_columns, select_all_button1])\n",
-    "    display(controls1, graph1)\n",
-    "    graph2 = wdg.interactive_output(age_graph2, {'graphcolumns2': vaccine_columns})\n",
-    "    controls2 = wdg.HBox([vaccine_columns, select_all_button2])\n",
-    "    display(controls2, graph2)"
    ]
   },
   {
@@ -329,7 +311,7 @@
     }
    ],
    "source": [
-    "def age_graph1(graphcolumns1):\n",
+    "def draw_graph1(graphcolumns1):\n",
     "    ncolumns1 = len(graphcolumns1)\n",
     "    if ncolumns1>0:\n",
     "        age_df1.plot.bar(y=list(graphcolumns1), color=['lightgreen', 'orange'])\n",
@@ -350,8 +332,6 @@
     "    disabled=False\n",
     ")\n",
     "\n",
-    "graph1 = wdg.interactive_output(age_graph1, {'graphcolumns1': infection_columns})\n",
-    "\n",
     "# Create a 'Select all' button widget because it is not clear how to select multiple options (do shift + click)\n",
     "def select_all_button_callback1(*args):\n",
     "    infection_columns.value = infection_columns.options\n",
@@ -361,9 +341,13 @@
     "    tooltip='Click me to select all options'\n",
     ")\n",
     "\n",
+    "def show_graph1():\n",
+    "    graph1 = wdg.interactive_output(draw_graph1, {'graphcolumns1': infection_columns})\n",
+    "    controls1 = wdg.HBox([infection_columns, select_all_button1])\n",
+    "    display(controls1, graph1)\n",
+    "    \n",
     "select_all_button1.on_click(select_all_button_callback1)\n",
-    "controls1 = wdg.HBox([infection_columns, select_all_button1])\n",
-    "display(controls1, graph1)"
+    "show_graph1()"
    ]
   },
   {
@@ -419,7 +403,7 @@
     }
    ],
    "source": [
-    "def age_graph2(graphcolumns2):\n",
+    "def draw_graph2(graphcolumns2):\n",
     "    ncolumns2 = len(graphcolumns2)\n",
     "    if ncolumns2>0:\n",
     "        age_df2.plot(kind='bar', y=list(graphcolumns2), color=['orange', 'lightgreen', '#0AA7CE'])\n",
@@ -439,8 +423,6 @@
     "    disabled=False\n",
     ")\n",
     "\n",
-    "graph2 = wdg.interactive_output(age_graph2, {'graphcolumns2': vaccine_columns})\n",
-    "\n",
     "def select_all_button_callback2(*args):\n",
     "    vaccine_columns.value = vaccine_columns.options\n",
     "    \n",
@@ -449,9 +431,13 @@
     "    tooltip='Click me to select all options'\n",
     ")\n",
     "\n",
+    "def show_graph2():\n",
+    "    graph2 = wdg.interactive_output(draw_graph2, {'graphcolumns2': vaccine_columns})\n",
+    "    controls2 = wdg.HBox([vaccine_columns, select_all_button2])\n",
+    "    display(controls2, graph2)\n",
+    "    \n",
     "select_all_button2.on_click(select_all_button_callback2)\n",
-    "controls2 = wdg.HBox([vaccine_columns, select_all_button2])\n",
-    "display(controls2, graph2)"
+    "show_graph2()"
    ]
   },
   {
