--- a/Dashboard-2023-12-12.ipynb
+++ b/Dashboard-2023-12-12.ipynb
@@ -202,11 +202,11 @@
     "        \n",
     "def refresh_graphs():\n",
     "    # Change the values by setting the column values with empty lists, and then show all the values.\n",
-    "    # infection_columns.value = []\n",
-    "    # infection_columns.value = infection_columns.options\n",
+    "    infection_columns.value = []\n",
+    "    infection_columns.value = infection_columns.options\n",
     "    \n",
-    "    # vaccine_columns.value = []\n",
-    "    # vaccine_columns.value = vaccine_columns.options\n",
+    "    vaccine_columns.value = []\n",
+    "    vaccine_columns.value = vaccine_columns.options\n",
     "    \n",
     "    # Update the two graphs according to the new data of the selected date.\n",
     "    # The widgets need to be refreshed as well.\n",
