--- a/Dashboard-2023-12-12.ipynb
+++ b/Dashboard-2023-12-12.ipynb
@@ -201,7 +201,7 @@
     "        api_button.icon = 'exclamation-triangle'\n",
     "        \n",
     "def refresh_graphs():\n",
-    "    # Change the values by setting the column values with empty lists, and then show all the values.\n",
+    "    # Change the values by setting the column values with empty lists, and then select all the values.\n",
     "    infection_columns.value = []\n",
     "    infection_columns.value = infection_columns.options\n",
     "    \n",
@@ -325,8 +325,8 @@
     "\n",
     "# Create a multiple-selection widget for the first graph.\n",
     "infection_columns = wdg.SelectMultiple(\n",
-    "    options=['Total Infection','Reinfection'],\n",
-    "    value=['Total Infection','Reinfection'],\n",
+    "    options=['Total Infection', 'Reinfection'],\n",
+    "    value=['Total Infection', 'Reinfection'],\n",
     "    rows=2,\n",
     "    description='New Cases:',\n",
     "    disabled=False\n",
