--- a/Dashboard-2023-12-12.ipynb
+++ b/Dashboard-2023-12-12.ipynb
@@ -136,6 +136,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pick any date from the following options to display graphs of your selected date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The initial specified date for the following graphs is 2022-01-01. \n",
+    "You can choose a date from the options below."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
